able to inject script from partial to dom

--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -125,6 +125,8 @@
     {% component "toast_notification" notification_type="success" message="" %} {% endcomponent %}
     {% component "toast_notification" notification_type="danger" message="" %} {% endcomponent %}
     {% component "toast_notification" notification_type="warning" message="" %} {% endcomponent %}
+
+    {% component "loading_modal" %} {% endcomponent %}
 </body>
 
 <script src="{% static 'js/helper_func.js' %}"></script>
