--- a/adminv2/templates/adminv2/cms/partials/team/team.html
+++ b/adminv2/templates/adminv2/cms/partials/team/team.html
@@ -14,7 +14,7 @@
             <template x-for="(item, index) in items" :key="item.id">
                 <div class="flex flex-col gap-2" x-sort:item="item">
                     <figure class="relative h-[408px] w-full min-w-52 rounded-lg overflow-hidden">
-                        <div class="absolute right-0 top-0 p-2 bg-gray-50 cursor-move z-10" x-sort-handler>
+                        <div class="absolute right-0 top-0 p-2 bg-gray-50 cursor-move z-10" x-sort-handle>
                             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="black"><path d="M120-200v-80h720v80H120Zm0-160v-80h720v80H120Zm0-160v-80h720v80H120Zm0-160v-80h720v80H120Z"/></svg>
                         </div>   
                         <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
@@ -38,3 +38,157 @@
         </div>
     </section>
 {% endif %}
+
+<script>
+    function openDeleteMemberModal(e){
+        const element = e.target;
+        const data_id = element.getAttribute('data-id');
+        const modal = document.getElementById("modal-delete_member_modal")
+        const del_btn = modal.querySelector('.delete-btn')
+        console.log(del_btn)
+        del_btn.onclick = function(){
+            deleteMember(event, data_id)
+        }
+        openModal_delete_member_modal();
+    }
+
+    function submitTeamMemberForm(event){
+        event.preventDefault();
+        const form = event.target;
+        const formData = new FormData(form)
+
+        const submitBtn = form.querySelector('button[type="submit"]');
+        let originalText = submitBtn.innerHTML;
+        submitBtn.innerHTML = `<i class="fa fa-spinner fa-spin"></i>`;
+        submitBtn.disabled = true;     
+
+        console.log(form.action)
+        fetch(form.action, {
+            method: "POST",
+            body: formData,
+            headers: {
+                "X-Requested-With": "XMLHttpRequest",
+                "X-CSRFToken": getCsrfToken(),
+            },
+        })
+        .then(response => response.json())
+        .then(data => {
+            if(data.success){
+                showToastNotification('success', data.message)
+
+                // Refresh 
+                alpineContainer = Alpine.$data(cms_container);
+                activeTab = alpineContainer.activeTab
+                alpineContainer.loadTemplate(activeTab)
+
+                //close modal
+                closeModal_team_member_form();
+                
+            } else{
+                displayFormError(data.errors, form);
+                console.log(data.errors);
+                return;
+            }
+        })
+        .catch(error => {
+             console.error(error);
+             showToastNotification('danger', 'Something went wrong, please try again');
+        })
+        .finally(() => {
+            submitBtn.disabled = false;
+            submitBtn.innerHTML = originalText;
+        })
+
+    }
+
+
+    function updateTeamMember(event, testimonial_id){
+        event.preventDefault();
+        const form = event.target;
+        const formData = new FormData(form)
+
+        const submitBtn = form.querySelector('button[type="submit"]');
+        let originalText = submitBtn.innerHTML;
+        submitBtn.innerHTML = `<i class="fa fa-spinner fa-spin"></i> Updating...`;
+        submitBtn.disabled = true; 
+
+        fetch(form.action, {
+            method: "POST",
+            body: formData,
+            headers: {
+                "X-Requested-With": "XMLHttpRequest",
+                "X-CSRFToken": getCsrfToken(),
+            },
+        })
+        .then(response => response.json())
+        .then(data => {
+            if(data.success){
+                showToastNotification('success', data.message)
+
+                // Refresh 
+                alpineContainer = Alpine.$data(cms_container);
+                activeTab = alpineContainer.activeTab
+                alpineContainer.loadTemplate(activeTab)
+                
+                //close modal
+                closeModal_team_member_form();
+
+            } else{
+                displayFormError(data.errors, form);
+                console.log(data.errors);
+                return;
+            }
+        })
+        .catch(error => {
+             console.error(error);
+             showToastNotification('danger', 'Something went wrong, please try again');
+        })
+        .finally(() => {
+            submitBtn.disabled = false;
+            submitBtn.innerHTML = originalText;
+        })
+    }
+
+    
+    function deleteMember(event, id){
+        const url = '{% url 'cmscontent:delete-member' 123 %}'.replace("123", id);
+        
+        deleteBtn = event.currentTarget;
+        originalText = deleteBtn.innerHTML   
+        deleteBtn.disabled = true; 
+        deleteBtn.innerHTML = `<i class="fa fa-spinner fa-spin"></i> Deleting...`;
+        
+        fetch(url, {
+            method: "POST",
+            headers: {
+            "X-Requested-With": "XMLHttpRequest",
+            "X-CSRFToken": getCsrfToken()
+            }
+        })
+        .then(response => response.json())
+        .then(data => {
+            if(data.success){
+                showToastNotification('success', data.message)
+                
+                // Refresh 
+                alpineContainer = Alpine.$data(cms_container);
+                activeTab = alpineContainer.activeTab
+                alpineContainer.loadTemplate(activeTab)
+
+                //close modal
+                closeModal_delete_member_modal();         
+            } else{
+                console.error("Error", data.error)
+                showToastNotification('danger', 'Something went wrong, please try again')
+            }
+        })
+        .catch(error => {
+            console.error("Error", error) 
+            showToastNotification('danger', 'Something went wrong, please try again')
+        })
+        .finally(() => {
+            deleteBtn.disabled = false
+            deleteBtn.innerHTML = originalText
+        })
+    }
+</script>
