--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -254,6 +254,8 @@
     {% component "toast_notification" notification_type="success" message="" %} {% endcomponent %}
     {% component "toast_notification" notification_type="danger" message="" %} {% endcomponent %}
     {% component "toast_notification" notification_type="warning" message="" %} {% endcomponent %}
+
+    {% component "loading_modal" %} {% endcomponent %}
     
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
     <script src="{% static 'js/helper_func.js' %}"></script>
