--- a/adminv2/templates/adminv2/cms/partials/testimonial/testimonials.html
+++ b/adminv2/templates/adminv2/cms/partials/testimonial/testimonials.html
@@ -64,3 +64,152 @@
         </tbody>
     </table>
 </div>
+
+
+
+
+
+
+<script>
+    
+
+    function addTestimonial(event){
+        event.preventDefault();
+        const form = event.target;
+        const formData = new FormData(form)
+
+        const submitBtn = form.querySelector('button[type="submit"]');
+        let originalText = submitBtn.innerHTML;
+        submitBtn.innerHTML = `<i class="fa fa-spinner fa-spin"></i>`;
+        submitBtn.disabled = true;     
+
+        console.log(form.action)
+        fetch(form.action, {
+            method: "POST",
+            body: formData,
+            headers: {
+                "X-Requested-With": "XMLHttpRequest",
+                "X-CSRFToken": getCsrfToken(),
+            },
+        })
+        .then(response => response.json())
+        .then(data => {
+            if(data.success){
+                showToastNotification('success', data.message)
+
+                // Refresh 
+                alpineContainer = Alpine.$data(cms_container);
+                activeTab = alpineContainer.activeTab
+                alpineContainer.loadTemplate(activeTab)
+
+                //close modal
+                closeModal_testimonial_form();
+                
+            } else{
+                displayFormError(data.errors, form);
+                console.log(data.errors);
+                return;
+            }
+        })
+        .catch(error => {
+             console.error(error);
+             showToastNotification('danger', 'Something went wrong, please try again');
+        })
+        .finally(() => {
+            submitBtn.disabled = false;
+            submitBtn.innerHTML = originalText;
+        })
+
+    }
+
+    function updateTestimonial(event, testimonial_id){
+        event.preventDefault();
+        const form = event.target;
+        const formData = new FormData(form)
+
+        const submitBtn = form.querySelector('button[type="submit"]');
+        let originalText = submitBtn.innerHTML;
+        submitBtn.innerHTML = `<i class="fa fa-spinner fa-spin"></i> Updating...`;
+        submitBtn.disabled = true; 
+
+        fetch(form.action, {
+            method: "POST",
+            body: formData,
+            headers: {
+                "X-Requested-With": "XMLHttpRequest",
+                "X-CSRFToken": getCsrfToken(),
+            },
+        })
+        .then(response => response.json())
+        .then(data => {
+            if(data.success){
+                showToastNotification('success', data.message)
+
+                // Refresh 
+                alpineContainer = Alpine.$data(cms_container);
+                activeTab = alpineContainer.activeTab
+                alpineContainer.loadTemplate(activeTab)
+                
+                //close modal
+                closeModal_testimonial_form();
+            } else{
+                displayFormError(data.errors, form);
+                console.log(data.errors);
+                return;
+            }
+        })
+        .catch(error => {
+             console.error(error);
+             showToastNotification('danger', 'Something went wrong, please try again');
+        })
+        .finally(() => {
+            submitBtn.disabled = false;
+            submitBtn.innerHTML = originalText;
+        })
+    }
+
+
+    function deleteTestimonial(event, testimonial_id){
+        const url = '{% url 'cmscontent:delete-testimonial' 123 %}'.replace("123", testimonial_id);
+        
+        deleteBtn = event.currentTarget;
+        originalText = deleteBtn.innerHTML   
+        deleteBtn.disabled = true; 
+        deleteBtn.innerHTML = `<i class="fa fa-spinner fa-spin"></i> Deleting...`;
+        
+        fetch(url, {
+            method: "POST",
+            headers: {
+            "X-Requested-With": "XMLHttpRequest",
+            "X-CSRFToken": getCsrfToken()
+            }
+        })
+        .then(response => response.json())
+        .then(data => {
+            if(data.success){
+                showToastNotification('success', data.message)
+                
+                // Refresh 
+                alpineContainer = Alpine.$data(cms_container);
+                activeTab = alpineContainer.activeTab
+                alpineContainer.loadTemplate(activeTab)
+
+                //close modal
+                closeModal_delete_testimonial_modal();
+                closeModal_testimonial_form();                
+            } else{
+                console.error("Error", data.error)
+                showToastNotification('danger', 'Something went wrong, please try again')
+            }
+        })
+        .catch(error => {
+            console.error("Error", error) 
+            showToastNotification('danger', 'Something went wrong, please try again')
+        })
+        .finally(() => {
+            deleteBtn.disabled = false
+            deleteBtn.innerHTML = originalText
+        })
+    }
+
+</script>
