--- a/adminv2/templates/adminv2/blog/create-blog.html
+++ b/adminv2/templates/adminv2/blog/create-blog.html
@@ -10,7 +10,7 @@
 {% block section_title %} Blog {% endblock %}
 
 {% block content %} 
-    <form action="{% url 'adminv2:create-blog' %}" onsubmit="submitBlogForm(event)" class="max-w-2xl self-center lg:self-start">
+    <form action="{% url 'adminv2:create-blog' %}" onsubmit="submitBlogForm(event)" class="w-full max-w-2xl self-center lg:self-start">
         <div class="flex flex-col gap-3 lg:gap-4">
             <h3 class="text-xl font-bold">Create Blog Article</h3>
             <div>
@@ -55,7 +55,7 @@
                             <div class="relative w-full h-full">
                                 <div class="w-full h-full flex  items-center justify-center absolute inset-0 bg-gradient-to-t from-black/40 to-transparent">
                                     <label for="id_cover_image" type="button" class="btn text-white border-2 border-white rounded-xl w-fit h-fit">Replace</button>
-                                </div>
+                                </div>0
                                 <div class="w-full h-full">
                                     <img :src="image" class="w-full h-full object-cover mt-2">
                                 </div>
