--- a/adminv2/templates/adminv2/blog/update-blog.html
+++ b/adminv2/templates/adminv2/blog/update-blog.html
@@ -11,7 +11,7 @@
 
 {% block content %} 
     {% if article %}
-        <form action="{% url 'adminv2:update-blog' article.id %}" onsubmit="updateBlog(event)" class="max-w-2xl self-center lg:self-start">
+        <form action="{% url 'adminv2:update-blog' article.id %}" onsubmit="updateBlog(event)" class="w-full max-w-2xl self-center lg:self-start">
             
             <div class="flex flex-col gap-3 lg:gap-4">
                 <h3 class="text-xl font-bold">Update Blog Article</h3>
